#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-02-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9921 released.

        * Minor changes to fix errors found when run in Linux.


2011-02-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9920 released.

        * Minor changes to fix errors found when run in Linux.


2011-02-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9919 released.

        * Wrapped DB operations with semaphore protection.

        * More output parsing tweaks and bug fixes.


2011-02-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9918 released.

        * Completed work on both IPC and Win32 Semaphore
          code.

        * Implemented 'top' CPU usage test to prevent FullAuto
          launching in unattended mode when CPU usage is
          high.

        * More output parsing tweaks and bug fixes.


2011-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9917 released.

        * Added a LOT more password persistence and management
          code.

        * Prompts now have timeouts. (So they don't interfere
          with other processes in unattended mode).

        * Got semaphores working again in Cygwin.


2011-02-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9916 released.

        * More work on "Scheduled Jobs".

        * Fixed bugs with pwd test.


2011-02-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9915 released.

        * Looks like "Finally" fixed Cygwin reliability - use
          built-in bash pwd rather than cmd /c chdir for