@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7c3176cefa39eba4564973b60b3d03241451e2ff ChangeLog
+SHA1 6193570b9c9b4b6128749456daa4e160859b8158 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 f33a524126bd793e01b2a4a92db6b833b0226a8f MANIFEST
-SHA1 03a247e733b85e3198536f103c57f23f9bde04ec META.yml
-SHA1 9c7aa8c0c763f4ce15611c5f2fe0b19a5fbabf05 Makefile.PL
+SHA1 fde2ac106407f056a6d215ad74ff54f77f24a6de META.yml
+SHA1 93b988c4c787885b46d875f25ad7fa90f08760b4 Makefile.PL
 SHA1 e489dfcbb5205900fb16909d95b4edd259ca9cbb README
 SHA1 371459f4c38d6be12317b0f38de4fed769850b4f bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,21 +33,21 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a48e5c1834f9965aef9cc1e3efe0c84ad5f3bfa6 lib/Net/FullAuto.pm
+SHA1 7f34e4c283d929bed84665e1af73633b57fa116a lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
-SHA1 2667e3e5785bb6e8100b324bc4da8b5690cc5807 lib/Net/FullAuto/Distro/fa_code.pm
+SHA1 11e4d0e0d798d8c4ced869035e5802c1f2edc975 lib/Net/FullAuto/Distro/fa_code.pm
 SHA1 fbcb2e8c3f1b16784655c9a38cf49ffac2e3f944 lib/Net/FullAuto/Distro/fa_conf.pm
 SHA1 9583115bebb33026a03d8ca11711b8950af512f2 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 1d35d93af5c81e855afa9053801fdf1efb0ea4a0 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 416505b32aab252cb14f79b3c64d7e6bed8d8be2 lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 e34b29c40f1375a333b3564b06aab4aee462d31f lib/Net/FullAuto/FA_Core.pm
+SHA1 697a753d0881103ac53f0296a5a1b99cb93011af lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1nNR8ACgkQdsVAdUjO9Il5uACgnMhDGa4PWzTYzeCeM47/YkEb
-2/AAn0v8xJYCyNKIWXtL98MAgoHtpv+i
-=vPpz
+iEYEARECAAYFAk1olREACgkQdsVAdUjO9ImfOgCfVK7kt+lUErDIXgINiVO16/Ws
+4oIAoKkK198be0A+rY7EVKFuiY6XqeBH
+=tFIh
 -----END PGP SIGNATURE-----
